--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+    height: 100%;
+}
+
+h1 {
+    font-family: 'Salsa', cursive;
+}
+
+h2, h3 {
+    font-family: 'Quicksand', sans-serif;
+}
